# finance-anamoly-detector

./: README.md  pyproject.toml  requirements.txt
src/anomaly_streaming/: __init__.py  cli.py  config.py  dash_app.py  features.py  pipeline.py  utils.py
src/anomaly_streaming/data/: google_finance.py
src/anomaly_streaming/detectors/: base.py  isolation_forest.py  lstm_autoencoder.py  spc.py
src/finance_anomaly_detector/: api.py  config.py  data_stream.py  feature_engineering.py  historical.py  orchestrator.py
src/finance_anomaly_detector/dashboards/: streamlit_app.py
src/finance_anomaly_detector/detectors/: isolation_forest.py  lstm_autoencoder.py  spc.py
tests/: test_api_visualization.py  test_data_pipeline.py  test_feature_engineering.py  test_historical_detector.py  test_isolation_forest.py  test_lstm_autoencoder.py  test_spc.py
tests/data/: google_reliance.html
