[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-streaming"
version = "0.1.0"
description = "Real-time Indian market anomaly detection system"
readme = "README.md"
authors = [{name = "AI", email = "ai@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "httpx>=0.27",
    "scikit-learn>=1.4",
    "plotly>=5.20",
    "dash>=2.17",
    "fastapi>=0.111",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
